--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
+
+# Created by https://www.gitignore.io/api/maven
+
+### Maven ###
 target/
-.classpath
-.project
-.settings/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
+
+# End of https://www.gitignore.io/api/maven
